update time etc.

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ position: Ph.D Student
 affiliation: Xiamen University
 email: zhiweichen.cn@gmail.com
 keywords: Zhiwei Chen, computer vision, Xiamen university, XMU
-# google_scholar:
-# github_link:
+google_scholar: https://scholar.google.com.hk/citations?hl=zh-CN&pli=1&user=2Y3U__oAAAAJ
+github_link: https://github.com/zhiweichen0012
 # linkedin:
 avatar: ./assets/img/avatar.png
 # google_analytics:
