--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,26 @@
 # main links links
-main:
-  - title: "About Me"
-    url: "/#about-me"
+# main:
 
-  - title: "News"
-    url: "/#-news"
+#   - title: "招生信息"
+#     url: "/#enrolment"
 
-  - title: "Publications"
-    url: "/#-publications"
+#   - title: "个人信息"
+#     url: "/#about-me"
 
-  - title: "Teaching"
-    url: "/#-teaching"
+#   - title: "新闻"
+#     url: "/#-news"
 
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+#   - title: "代表论文"
+#     url: "/#-publications"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+#   - title: "科研项目"
+#     url: "/#-Program"
 
-  - title: "Internships"
-    url: "/#-internships"
+#   - title: "教学经历"
+#     url: "/#-teaching"
+
+  # - title: "Invited Talks"
+  #   url: "/#-invited-talks"
+
+  # - title: "Internships"
+  #   url: "/#-internships"
